# pytango-evr116

./: README.md  pyproject.toml
tangods_evr116/: evr116.py
tangods_evr116/calibration/: duty_cycle_voltage_curve.csv  pressure_voltage_curve.csv
